# KPC

./: 6clique1.txt  6clique2.txt  CMakeLists.txt  DDegCol.cpp  DegenCol.cpp  DegenCol0514.cpp  DegenCol2.cpp  DegenCol3.cpp  KPC.cpp  R2.cpp  R2_.cpp  R3.cpp  R3_.cpp  README.md  base2.cpp  base_res.csv  baseline.cpp  c1.txt  c2.txt  main.cpp  mainBK.cpp  nei.csv  run.sh  run2.sh  runbase.sh  runbase2.sh  t.txt
data/: congress4P.csv  congress4P.csvR2  congress4P.csvR3  congress5P.csv  congress5P.csvR2  congress5P.csvR3  congress6P.csv  test  test2  test3  test4.csv
